# learn_cuda

./: CMakeLists.txt  kernel.cu  main.cpp
